2010-11-12  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Csaba Osztrogonác.

        [qt] script-clone tests added in r71895 fails on qt platform
        https://bugs.webkit.org/show_bug.cgi?id=49429

        Enabled fast/dom/script-clone-rerun-self.html and fast/dom/script-clone-rerun.html

        * platform/qt/Skipped:
2010-11-12  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [qt] script-clone tests added in r71895 fails on qt platform
        https://bugs.webkit.org/show_bug.cgi?id=49429

        Fixed parseEndElement to call ScriptElement's executeScript as supposed to that of ScriptController.

        * dom/XMLDocumentParserQt.cpp:
        (WebCore::XMLDocumentParser::parseEndElement):

git-svn-id: svn://svn.chromium.org/blink/trunk@71899 bbb929c8-8fbe-4397-9dbb-9b2b20218538